# sawmill

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PRD.md  PROMPT.md  README.md  STATUS.md  TASKS.md  pyproject.toml  ralph-loop.sh  sourceme
examples/vivado/: PATTERNS.md  plugin-spec.json  plugin_reference.py
sawmill/: __init__.py  __main__.py  cli.py
sawmill/core/: __init__.py  aggregation.py  config.py  filter.py  plugin.py  waiver.py
sawmill/models/: __init__.py  filter_def.py  message.py  plugin_api.py  waiver.py
sawmill/plugin/: __init__.py  hookspec.py
sawmill/plugins/: __init__.py  vivado.py
sawmill/tui/: __init__.py  app.py  base.tcss  filter_parser.py  theme.py
sawmill/tui/widgets/: __init__.py  filter_modal.py  filter_sidebar.py  footer.py  message_list.py  summary_panel.py
sawmill/utils/: __init__.py  git.py
tests/: __init__.py  conftest.py  test_ci_mode.py  test_ci_report.py  test_ci_waivers.py  test_cli.py  test_cli_formats.py  test_cli_id_filter.py  test_cli_integration.py  test_cli_plugin_discovery.py  test_cli_summary.py  test_fixtures.py  test_plugin_api.py  test_project_setup.py  test_waiver_generation.py
tests/core/: test_aggregation.py  test_config.py  test_config_discovery.py  test_filter.py  test_filter_stats.py  test_plugin_autodetect.py  test_plugin_manager.py  test_waiver.py  test_waiver_matching.py
tests/models/: test_filter_def.py  test_message.py
tests/plugin/: test_hookspec.py
tests/plugins/: test_vivado.py
tests/tui/: __init__.py  test_app.py  test_filter_modal.py  test_filter_parser.py  test_filter_sidebar.py  test_footer.py  test_message_list.py  test_summary_panel.py
tests/utils/: __init__.py  test_git.py
